...
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nn5-TH-TmX">
                                <state key="normal" title="Present Toast"/>
                                <connections>
                                    <action selector="presentToast:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="MdD-Es-HTE"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sr0-5I-DBe">
                                <state key="normal" title="Present sucess Toast"/>
                                <connections>
                                    <action selector="presentSuccessToast:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="nW0-iq-rwM"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BDq-Jc-EfZ">
                                <state key="normal" title="Present custom view"/>
...
