...
                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="success.png" translatesAutoresizingMaskIntoConstraints="NO" id="oeU-8H-Guv">
                    <constraints>
                        <constraint firstAttribute="width" constant="44" id="8JS-dK-FmM"/>
                        <constraint firstAttribute="height" constant="44" id="lXx-g9-0hs"/>
                    </constraints>
                </imageView>
                <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="actions-menu-close-blue.png" translatesAutoresizingMaskIntoConstraints="NO" id="GhD-CH-4Nc">
                    <constraints>
                        <constraint firstAttribute="width" constant="44" id="IXw-08-EkN"/>
                        <constraint firstAttribute="height" constant="44" id="OIu-6N-SOi"/>
                    </constraints>
                </imageView>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Vous contacts ont été restauré avec succés" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CGa-qI-CPT">
...
